<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="firstAppText">SPOTIFY STREAMER</string>
    <string name="secondAppText">SCORES APP</string>
    <string name="thirdAppText">LIBRARY APP</string>
    <string name="fourthAppText">BUILD IT BIGGER</string>
    <string name="fifthAppText">XYZ READER</string>
    <string name="sixthAppText">CAPSTONE: MY OWN APP</string>
</resources>
