<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:gravity="center"
        android:textSize="@dimen/textSizeTitle"
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:layout_below="@id/tvTitle">
        <Button
            android:id="@+id/btnFirstApp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/textSizeNormal"
            android:text="@string/firstAppText"
            android:background="@color/udacityColor"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnSecondApp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/textSizeNormal"
            android:layout_below="@id/btnFirstApp"
            android:text="@string/secondAppText"
            android:background="@color/udacityColor"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnThirdApp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/textSizeNormal"
            android:layout_below="@id/btnSecondApp"
            android:text="@string/thirdAppText"
            android:background="@color/udacityColor"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnFourthApp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/textSizeNormal"
            android:layout_below="@id/btnThirdApp"
            android:padding="10dp"
            android:background="@color/udacityColor"
            android:text="@string/fourthAppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnFifthApp"
            android:textSize="@dimen/textSizeNormal"
            android:layout_below="@id/btnFourthApp"
            android:text="@string/fifthAppText"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@color/udacityColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSixthApp"
            android:textSize="@dimen/textSizeNormal"
            android:layout_below="@id/btnFifthApp"
            android:text="@string/sixthAppText"
            android:paddingTop="10dp"
            android:textColor="@android:color/white"
            android:background="@color/appColor"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>
